--- a/index.html
+++ b/index.html
@@ -8,17 +8,21 @@
   <title>meme generator</title>
   <link rel="stylesheet" href="style.css">
 </head>
+<center>
 
-<body>
-  <form>
-    <input type="text" name="top" id="top">
-    <input type="text" name="bottom" id="bottom">
-    <input type="text" name="url" id="url">
-    <button type="submit">submit</button>
-  </form>
-  <div id="container"></div>
+  <body>
+    <H1>Meme Machine</H1>
+    <form>
+      Top sentence
+      <input type="text" name="top" id="top"> Bottom sentence
+      <input type="text" name="bottom" id="bottom"> What's your URL?
+      <input type="text" name="url" id="url">
+      <button type="submit">submit</button>
+    </form>
+    <div id="container"></div>
 
-</body>
+  </body>
+</center>
 <script src="https://code.jquery.com/jquery-3.3.1.min.js" integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
   crossorigin="anonymous"></script>
 <script src="main.js"></script>
