adding cool features

--- a/index.html
+++ b/index.html
@@ -12,12 +12,13 @@
 
   <body>
     <H1>Meme Machine</H1>
-    <form>
+    <form id="form">
       Top sentence
       <input type="text" name="top" id="top"> Bottom sentence
       <input type="text" name="bottom" id="bottom"> What's your URL?
       <input type="text" name="url" id="url">
       <button type="submit">submit</button>
+      <input type="button" id="btn" value="Reset" />
     </form>
     <div id="container"></div>
 
