--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <center>
 
   <body>
-    <H1>Meme Machine</H1>
+    <H1 id="title">Meme Machine</H1>
     <form id="form">
       Top sentence
       <input type="text" name="top" id="top"> Bottom sentence
