--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
       <input type="text" name="bottom" id="bottom"> What's your URL?
       <input type="text" name="url" id="url">
       <button type="submit">submit</button>
-      <input type="button" id="btn" value="Reset" />
+      <input type="button" id="btn" value="clear" />
     </form>
     <div id="container"></div>
 
